Fixed word breaking problem with overflow-wrap: break-word; instead

--- a/static/style.css
+++ b/static/style.css
@@ -97,7 +97,7 @@ body{
     padding-bottom: 1%;
     padding-right: 2%;
     padding-left: 2%; 
-    word-break:break-all;
+    overflow-wrap: break-word;%;
 }
 
 .author{
